scrollbar fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 
 html {
   font-size: 10px;
+  overflow-y: scroll;
 }
 
 @media (min-width: 576px) {
@@ -17,7 +18,6 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
-  width: 100vw;
   overflow-x: hidden;
 }
 
